--- a/Pipfile
+++ b/Pipfile
@@ -16,7 +16,7 @@ pytz = "*"
 python-dateutil = "*"
 tzlocal = "*"
 daemon = "*"
-"pypiwin32" = "*"
+"pypiwin32" = {"*", sys_platform = "== 'windows'"}
 
 
 [dev-packages]
