--- a/Pipfile
+++ b/Pipfile
@@ -1,9 +1,9 @@
 [[source]]
-
-url = "https://pypi.python.org/simple"
-verify_ssl = true
 name = "pypi"
+url = "https://pypi.org/simple"
+verify_ssl = true
 
+[dev-packages]
 
 [packages]
 
@@ -18,11 +18,5 @@ tzlocal = "*"
 daemon = "*"
 "pypiwin32" = {version = "*", sys_platform = "== 'win32'"}
 
-
-[dev-packages]
-
-
-
 [requires]
-
-python_version = "3.6"
+python_version = "3.7"
