ubuntu 24.04, but flask is borked

--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 beautifulsoup4 = "*"
 html5lib = "*"
-flask = "*"
+flask = "<3"
 flask-table = "*"
 python-daemon = "*"
 pytz = "*"
